Fix spacing between tab-benefits tabs

--- a/src/stylesheets/modules/_mod-tab-benefits.scss
+++ b/src/stylesheets/modules/_mod-tab-benefits.scss
@@ -38,7 +38,7 @@
     cursor: pointer;
   }
   .tab-item {
-    margin: 5px 0;
+    margin: 10px 0;
     >h3 {
       @extend .d-lg-none, .d-block;
       background: $black;
@@ -48,12 +48,15 @@
     display: none;
     background: $white;
     margin: 0 18px 20px;
-    padding: 50px 20px 0;
+    padding: 50px 20px;
     letter-spacing: 1.1px;
     line-height: 2;
     p,
     h4 {
-      margin-bottom: 40px;
+      margin-bottom: 45px;
+    }
+    p:last-child {
+      margin-bottom: 0;
     }
   }
 }
